Return the config to the user

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         </ul>
       </section>
       <hr />
-      <form>
+      <form action="/create-config" method="POST">
         <label for="clientSecret">Client Secret:</label>
         <input
           type="text"
