--- a/public/config.html
+++ b/public/config.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>PKCE Proxy</title>
-    <link rel="stylesheet" href="/public/mvp.css" />
+    <link rel="stylesheet" href="/public/bootstrap.min.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="Dan Palmer" />
+    <style type="text/css">
+      .required {
+        color: red;
+      }
+    </style>
   </head>
   <body>
-    <main>
-      <h1>PKCE Proxy</h1>
-      <section>
-        <h4>Authorize URL</h4>
+    <div class="col-lg-8 mx-auto p-4 py-md-5 mt-5">
+      <header>
+        <h1>PKCE Proxy</h1>
+      </header>
+      <hr class="my-5 border-secondary" />
+      <main>
         <p>
-          <code style="word-break: break-word"
-            >https://PROXY_HOSTNAME/TOKEN/authorize</code
-          >
+          Below are the 3 URLs necessary for a PKCE OAuth flow. Use these in
+          your client application in place of the original URLs that were
+          provided by the OAuth service provider. Keep everything else the same.
         </p>
-        <br />
-        <h4>Token URL</h4>
         <p>
-          <code style="word-break: break-word"
-            >https://PROXY_HOSTNAME/TOKEN/token</code
-          >
+          These URLs contain your client ID and secret in an encrypted form and
+          are therefore safe to distribute to unstrusted parties.
         </p>
-        <br />
-        <h4>Refresh Token URL</h4>
-        <p>
-          <code style="word-break: break-word"
-            >https://PROXY_HOSTNAME/TOKEN/refresh-token</code
-          >
-        </p>
-      </section>
-    </main>
+        <hr class="my-5 border-secondary" />
+        <section>
+          <h4>Authorize URL</h4>
+          <p>
+            <code style="word-break: break-word"
+              >https://PROXY_HOSTNAME/TOKEN/authorize</code
+            >
+          </p>
+          <br />
+          <h4>Token URL</h4>
+          <p>
+            <code style="word-break: break-word"
+              >https://PROXY_HOSTNAME/TOKEN/token</code
+            >
+          </p>
+          <br />
+          <h4>Refresh Token URL</h4>
+          <p>
+            <code style="word-break: break-word"
+              >https://PROXY_HOSTNAME/TOKEN/refresh-token</code
+            >
+          </p>
+        </section>
+      </main>
+      <footer class="pt-5 my-5 text-body-secondary border-top">
+        Created by Dan Palmer and contributors © 2024
+      </footer>
+    </div>
   </body>
 </html>
