--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,13 @@
         </p>
         <h5>What is PKCE?</h5>
         <p>
-          PKCE, or TODO, is newer, alternative OAuth flow that does not require
-          a client secret key to function, instead negotiating a key per
-          session. The key benefit is that no secret information needs to be
-          distributed with a client application. This makes it easier to create
-          open-source client applications, and means there's nothing secret that
-          can be reverse engineered out of client applications.
+          PKCE, or Proof Key for Code Exchange, is newer, alternative OAuth flow
+          that does not require a client secret key to function, instead
+          negotiating a key per session. The key benefit is that no secret
+          information needs to be distributed with a client application. This
+          makes it easier to create open-source client applications, and means
+          there's nothing secret that can be reverse engineered out of client
+          applications.
         </p>
         <h5>What is a PKCE proxy?</h5>
         <p>
