--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,8 @@
         </form>
       </main>
       <footer class="pt-5 my-5 text-body-secondary border-top">
-        Created by Dan Palmer and contributors © 2024
+        Created by <a href="https://danpalmer.me/">Dan Palmer</a> and
+        <a href="https://github.com/danpalmer/pkce-proxy">contributors</a>
       </footer>
     </div>
   </body>
