Remind users about redirect URLs

--- a/public/config.html
+++ b/public/config.html
@@ -44,10 +44,17 @@
             >
           </p>
           <br />
-          <h4>Refresh Token URL</h4>
+          <h4>Refresh Token URL (optional)</h4>
           <p>
             <code style="word-break: break-word"
               >https://PROXY_HOSTNAME/TOKEN/refresh-token</code
+            >
+          </p>
+          <br />
+          <h4>Redirect URL</h4>
+          <p>
+            <code style="word-break: break-word"
+              >https://PROXY_HOSTNAME/redirect</code
             >
           </p>
         </section>
