Rename auth header, this isn't necessarily basic

--- a/public/index.html
+++ b/public/index.html
@@ -129,11 +129,11 @@
           </div>
 
           <div class="mb-3">
-            <label for="refreshTokenUrl">Basic Auth header</label>
+            <label for="refreshTokenUrl">Auth header</label>
             <input
               type="text"
-              id="basicAuthHeader"
-              name="basicAuthHeader"
+              id="authHeader"
+              name="authHeader"
               class="form-control"
             />
             <small class="form-text text-muted">
