--- a/public/index.html
+++ b/public/index.html
@@ -152,8 +152,11 @@
         </form>
       </main>
       <footer class="pt-5 my-5 text-body-secondary border-top">
-        Created by <a href="https://danpalmer.me/">Dan Palmer</a> and
-        <a href="https://github.com/danpalmer/pkce-proxy">contributors</a>
+        Created by
+        <a href="https://github.com/danpalmer/pkce-proxy/graphs/contributors"
+          >contributors</a
+        >
+        on <a href="https://github.com/danpalmer/pkce-proxy">GitHub</a>.
       </footer>
     </div>
   </body>
